--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+    <dependency>
+      <groupId>com.microsoft.sqlserver</groupId>
+      <artifactId>mssql-jdbc</artifactId>
+      <version>7.0.0.jre8</version>
+    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.microsoft.sqlserver</groupId>-->
+<!--      <artifactId>sqljdbc4</artifactId>-->
+<!--      <version>4.0</version>-->
+<!--    </dependency>-->
+
 
   </dependencies>
 
